--- a/styles/crudtarefas.css
+++ b/styles/crudtarefas.css
@@ -16,7 +16,7 @@ h1 {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 70%;
     min-width: 60%;
 }
 
